# DressupRace

./: .gitignore  CMakeLists.txt  readme.md
include/: button.h  collisions.h  collisions2.h  collisions3.h  constants.h  game.h  gameobjects.h  identifier2.h  npcBuffer.h  npcs.h  tally.h  updater.h
src/: main.cpp  npcLoop.cpp
src/game/: npcs.cpp  tally.cpp
src/gameobjects/: actions.cpp  ganiParser.cpp  menus.cpp  npcs.cpp  tally.cpp
